--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "firebaseui": "^0.600.0",
     "pinia": "^2.1.7",
