--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "firebase": "^10.11.0",
     "firebaseui": "^0.600.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
